<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            tools:context=".MainActivity" tools:background="@android:color/background_light">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                          android:id="@+id/topGuideline"
                                                          android:orientation="horizontal"
                                                          app:layout_constraintGuide_percent="0.3"/>
            <TextView
                    android:text="@string/bmi_mass_label_kg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/MassLabelTV"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/bmi_margin_lr_texts"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/bmi_margin_lr_texts"
                    android:layout_marginTop="@dimen/bmi_margin_tb_elements"
                    app:layout_constraintTop_toTopOf="@+id/topGuideline" app:layout_constraintHorizontal_bias="0.0"
                    android:textSize="@dimen/bmi_labels_text_size"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/MassInputET"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/bmi_margin_lr_texts"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/bmi_margin_lr_texts"
                    android:layout_marginTop="@dimen/bmi_margin_tb_elements"
                    app:layout_constraintTop_toBottomOf="@+id/MassLabelTV"
                    android:textSize="@dimen/bmi_input_text_size"
                    android:hint="@string/bmi_mass_hint_kg" android:textColor="@android:color/black"
                    app:layout_constraintHorizontal_bias="0.0" android:maxLength="3"/>
            <TextView
                    android:text="@string/bmi_height_label_cm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/HeightLabelTV"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/bmi_margin_lr_texts"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/bmi_margin_lr_texts"
                    android:layout_marginTop="@dimen/bmi_margin_tb_elements"
                    app:layout_constraintTop_toBottomOf="@+id/MassInputET" app:layout_constraintHorizontal_bias="0.0"
                    android:textSize="@dimen/bmi_labels_text_size"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/HeightInputET"
                    android:layout_marginTop="@dimen/bmi_margin_tb_elements"
                    app:layout_constraintTop_toBottomOf="@+id/HeightLabelTV"
                    android:layout_marginStart="@dimen/bmi_margin_lr_texts"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/bmi_margin_lr_texts"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textSize="@dimen/bmi_input_text_size"
                    android:hint="@string/bmi_height_hint_cm" android:textColor="@android:color/black"
                    app:layout_constraintHorizontal_bias="0.0" android:maxLength="3"/>
            <Button
                    android:text="@string/bmi_count_button_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/CountButton" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/bmi_margin_lr_texts"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/bmi_margin_lr_texts"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@color/colorAccent"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/bmi_button_text_size"
                    app:layout_constraintTop_toTopOf="@+id/guideline" android:layout_marginTop="@dimen/bmi_margin_tb_elements"
                    android:layout_marginBottom="@dimen/bmi_margin_tb_elements"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/BmiResultTV"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/bmi_margin_lr_result"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/bmi_margin_lr_result"
                    android:layout_marginTop="@dimen/bmi_margin_t_result" app:layout_constraintTop_toBottomOf="@+id/HeightInputET"
                    android:textSize="@dimen/bmi_result_text_size" android:textAlignment="center"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/BmiCategoryTV" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/bmi_margin_lr_texts"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/bmi_margin_lr_texts"
                    android:layout_marginTop="@dimen/bmi_margin_tb_elements" app:layout_constraintTop_toBottomOf="@+id/BmiResultTV"
                    android:textSize="@dimen/bmi_category_text_size" android:textAlignment="center"/>
            <androidx.constraintlayout.widget.Guideline
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/guideline"
                    app:layout_constraintGuide_percent="0.9"/>
            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp" app:srcCompat="@drawable/bmi"
                    android:id="@+id/MemeTopIV"
                    app:layout_constraintBottom_toTopOf="@+id/topGuideline"
                    android:layout_marginTop="@dimen/bmi_margin_tb_elements"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/bmi_margin_lr_texts" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="@dimen/bmi_margin_tb_elements"
                    android:layout_marginStart="@dimen/bmi_margin_lr_texts"
                    android:contentDescription="@string/bmi_main_toppic_description"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="60dp"
                    android:layout_height="55dp"
                    android:clickable="true" app:srcCompat="@drawable/ic_arrow_forward"
                    android:id="@+id/bmiInfoFAB"
                    app:backgroundTint="@color/colorAccent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/BmiResultTV"
                    android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.9"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/BmiCategoryTV"
                    android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>