...
    <string name="bmi_height_err_high">Height is too high</string>
    <string name="bmi_height_err_low">Height is too low</string>

    <string name="bmi_result">Bmi result</string>
    <string name="bmi_category">Bmi category</string>

    <string name="bmi_count_button_label">COUNT BMI</string>

    <string name="severely_underweight">severely underweight</string>

    <string name="severely_underweight_description">severely underweight Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies, dolor sed dictum aliquet, ipsum quam finibus nulla, nec scelerisque mi mauris eu erat. Maecenas pretium et leo non luctus. Vivamus pulvinar consectetur purus, sit amet venenatis quam lobortis a. Etiam purus tortor, malesuada vel maximus ut, commodo 

        Nunc consequat convallis tortor, ac sagittis diam mollis at. Proin eu luctus arcu, in facilisis odio. Donec euismod, massa vel pretium blandit, diam dolor semper leo, nec fringilla ligula dolor tincidunt massa. Maecenas varius pulvinar erat, eu pharetra diam pharetra id. Aliquam feugiat velit dui, ut pulvinar ipsum bibendum eu. Maecenas hendrerit placerat libero, vitae sodales ex mattis ut
...
        (September 1981), replacing an earlier definition (RFC 760, January 1980). IPv4 is a connectionless protocol for
        use on packet-switched networks. It operates on a best effort delivery model, in that it does not guarantee
        delivery, nor does it assure proper sequencing or avoidance of duplicate delivery. These aspects, including data
        integrity, are addressed by an upper layer transport protocol, such as the Transmission Control Protocol (TCP).
    </string>

    <string name="bmi_switch_units">switch units</string>
    <string name="bmi_switch_units_messege">units switched</string>

    <string name="his_history">History</string>


</resources>
...
