...
                android:id="@+id/starIV" android:layout_weight="0"
                android:layout_marginTop="@dimen/abm_image_margin_tblr" android:layout_marginBottom="@dimen/abm_image_margin_tblr"
                android:layout_marginLeft="@dimen/abm_image_margin_tblr" android:layout_marginRight="@dimen/abm_image_margin_tblr"/>
        <TextView
                android:text="@string/abm_about_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/title" android:textSize="30sp"
                android:layout_weight="0"
                android:layout_marginTop="@dimen/abm_title_margin_t" android:layout_marginBottom="@dimen/abm_title_margin_b"
                android:layout_marginLeft="@dimen/abm_title_margin_lr" android:layout_marginRight="@dimen/abm_title_margin_lr"/>

    </LinearLayout>
    <ScrollView
...
